feat: 커스텀 구분자 분리 기능 추가